parslers-benchmark/src/tests/invalid/syntaxErr/while/dooErr.wacc
# do typo

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  while false doo
    skip
  done
end
